--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
     <body>
         <!-- header with image -->
         <header id="header">
-  
             <nav id="nav-bar">
-              <span>
-               <!-- <img src="https://images.pexels.com/photos/1055272/pexels-photo-1055272.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=60&w=40" alt="" id="header-img"> -->
-              <img src="https://res.cloudinary.com/fahamida/image/upload/c_scale,h_52,q_auto:best/v1537224142/pexels-photo-185471_uobw8h.jpg" alt="">
-               <h2>Cupcake Cafe</h2>     
-              </span>
-          <span>
-               <ul>
-              <a href="#page1" class="nav-link btn">About</a>
-              <a href="#page2" class="nav-link btn">Menu</a>
-              <a href="#page3" class="nav-link btn">Contact</a>      
-              </ul> 
-              </span>
-          
-            </nav>
+                    <div class="nav-link brand">
+                            <img id="header-img" src="https://res.cloudinary.com/fahamida/image/upload/c_scale,h_52,q_auto:best/v1537224142/pexels-photo-185471_uobw8h.jpg" alt="">
+                            <h2>Cupcake Cafe</h2>     
+                    </div>
+                     <div class="nav-link navbar-toggle">
+                       <i class="fas fa-bars fa-2x"></i>
+                     </div>
+                   <span class="navbar_items items-right">
+                    <a href="#page1" class="nav-link">About</a>
+                    <a href="#page2" class="nav-link">Menu</a>
+                    <a href="#page3" class="nav-link">Contact Us</a>  
+                </span>
+                 </nav>
+
         </header>
           <!-- about us -->
           <div id="page1">
@@ -56,7 +55,7 @@
                 <div class="menuItem"><img src="https://images.pexels.com/photos/32266/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=100"><h1>Tea</h1><p>hi everyone</p></div>
                 <div class="menuItem"><img src="https://images.pexels.com/photos/709827/pexels-photo-709827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=350" alt=""><h1>Savory Options</h1><p>hi everyone</p></div>
 
-                <iframe width="620" height="415"
+                <iframe id="video"
                 src="https://media.istockphoto.com/videos/desserts-stock-video-video-id461898504">
                 </iframe>
             </div>
@@ -82,10 +81,10 @@
         <div class="footer">
             <h1>Find Us On</h1>
             <ul id="sMedia">
-                <li class="btn"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook fa-3x"></i></a></li>
-                <li class="btn"><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-3x"></i></a></li>
-                <li class="btn"><a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube fa-3x"></i></a></li>
-                <li class="btn"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-3x"></i></a></li>
+                <li class="btn"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+                <li class="btn"><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+                <li class="btn"><a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
+                <li class="btn"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
             </ul>
         </div>
         <script src="index.js" async defer></script>
